--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,17 @@
         <title>TO-DO Manager</title>
         <link rel="stylesheet" href="./css/styles.css"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://cdn.tailwindcss.com"></script></head>
+        <meta name="csrf-token" content="<%= csrfToken %>" />
+        <script src="https://cdn.tailwindcss.com"></script>
         <script>
+            var token = document.querySelector('meta[name="csrf-token"]').getAttribute('content');
             function updateTodo(id) {
                 fetch(`/todos/${id}/markAsCompleted`, {
                     method: "put",
-                    headers: { "Content-Type": "application/json" }
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({
+                        "_csrf": token
+                    })
                 })
                 .then((res)=>{
                     if (res.ok){
@@ -21,7 +26,10 @@
             function deleteTodo(id){
                 fetch(`/todos/${id}`, {
                     method: "delete",
-                    headers: { "Content-Type": "application/json" }
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({
+                        "_csrf": token
+                    })
                 })
                 .then((res)=>{
                     if (res.ok){
@@ -31,6 +39,7 @@
                 .catch((err)=> { console.error(err) });
             }
         </script>
+    </head>
     <!-- <body>
         <%- include('header.ejs') %>
         <h1 class="text-2xl font-semibold text-gray-600"> My Todo-list</h1>
@@ -73,6 +82,7 @@
                 </div> 
             </div>
             <form action="/todos" method="post">
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <div class="flex gap-2 py-4">
                     <div class="flex-auto w-64">
                         <input type="text" name="title" class="border boder-gray-300 text-gray-900 text -sm rounded w-full p-2" placeholder="What's next?" autofocus required>
