--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,16 +4,17 @@
         <title>TO-DO Manager</title>
         <link rel="stylesheet" href="./css/styles.css"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="csrf-token" content="<%= csrfToken %>" />
+        <meta name="csrf-token" content="<%= csrfToken %>">
         <script src="https://cdn.tailwindcss.com"></script>
         <script>
             var token = document.querySelector('meta[name="csrf-token"]').getAttribute('content');
             function updateTodo(id) {
-                fetch(`/todos/${id}/markAsCompleted`, {
+                fetch(`/todos/${id}`, {
                     method: "put",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({
-                        "_csrf": token
+                        _csrf: token,
+                        completed: true
                     })
                 })
                 .then((res)=>{
@@ -28,7 +29,7 @@
                     method: "delete",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({
-                        "_csrf": token
+                        _csrf: token,
                     })
                 })
                 .then((res)=>{
@@ -81,14 +82,14 @@
                     <%- include('header.ejs') %> 
                 </div> 
             </div>
-            <form action="/todos" method="post">
+            <form action="/todos" method="post" >
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <div class="flex gap-2 py-4">
                     <div class="flex-auto w-64">
                         <input type="text" name="title" class="border boder-gray-300 text-gray-900 text -sm rounded w-full p-2" placeholder="What's next?" autofocus required>
                     </div>
                     <div class="flex-auto w-32">
-                        <input type="date" name="dueDate" id="" class="border boder-gray-300 text-gray-900 text -sm rounded w-full p-2 leading-4" >
+                        <input type="date" name="dueDate" id="" class="border boder-gray-300 text-gray-900 text -sm rounded w-full p-2 leading-4" required >
                     </div>
                     <div>
                         <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded text-sm px-5 py-2 mr-2 mb-2">Add Work</button>
@@ -106,6 +107,5 @@
                 <%- include('todos.ejs', { todos: dueLater }) %>
             </div>
             
-            
-        <body>
+        </body>
 </html>
